--- a/public/starter-code/assets/css/base.css
+++ b/public/starter-code/assets/css/base.css
@@ -85,7 +85,7 @@ html {
 
 body {
 	background: #fff;
-	font-family: 'Lobster', cursive;
+	font-family:  cursive;
 	font-size: 19pt;
 	font-weight: 300;
 	line-height: 1.75em;
