--- a/public/starter-code/assets/css/modules.css
+++ b/public/starter-code/assets/css/modules.css
@@ -15,11 +15,12 @@ h1 a strong, h2 a strong, h3 a strong, h4 a strong, h5 a strong, h6 a strong {
 }
 
 h2.alt {
-    color: #888;
+    color: #f5f5f5;
 }
 
 h2.alt strong {
     color: #666;
+    color: #f5f5f5;
 }
 
 strong, b {
@@ -276,7 +277,6 @@ button,
 
     #main > section {
         box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
-        background-image: url("images/overlay.png");
     }
 
         #main > section.dark {
@@ -381,3 +381,11 @@ button,
                 box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.15);
             }
 }
+
+
+ /* background */
+
+ .background{
+     background-image: url("https://i.gifer.com/J4o.gif");
+     color:#f3f3f3;
+ }
